mer juint test cases