@@ -15,13 +15,22 @@ class MangaeFilesTests {
 	void creatFiletest() throws IOException {
 		test = new ManageFiles();
 		alb = new ManageAlbum();
-		File file = new File("../../te.txt");
+		File file = new File("hello");
+		alb.createRootAlbum("root");
 		SoundClip s = test.createFile(file);
 		test.addFileToSub(alb.getRootAlbum(), s);
-		
-//		file.createNewFile();
-//		test.createFile(file);
-//		assertEquals("hello",test.root.getlistOfFiles().getFirst().toString());
+		assertEquals("hello",alb.getRootAlbum().getlistOfFiles().get(0).toString());
 	}
-
+	@Test
+	void deleteFiletest() {
+		test = new ManageFiles();
+		alb = new ManageAlbum();
+		File file = new File("lalasång");
+		alb.createRootAlbum("root");
+		SoundClip s = test.createFile(file);
+		test.addFileToSub(alb.getRootAlbum(), s);
+		test.deleteFile(s);
+		assertEquals(null,alb.getRootAlbum().getlistOfFiles().get(0).toString());
+	}
+	
 }
